--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>client</title>
+    <title>Client side</title>
   </head>
   <body>
-    <div id="app"></div>
+    <article id="app"></article>
     <!-- built files will be auto injected -->
   </body>
 </html>
